increase error tolerance when skipping heap sizes